[gd_scene load_steps=19 format=3 uid="uid://moanr32f0qrb"]

[ext_resource type="PackedScene" uid="uid://b2d7kghs0umqt" path="res://plants/plant.tscn" id="1_xr67b"]
[ext_resource type="Script" path="res://plants/defensive_plants/defensive_plants.gd" id="2_nun1l"]
[ext_resource type="Texture2D" uid="uid://dduajjvmi5d0r" path="res://assets/sprites/Lowrezjam_-_Black_and_White_sprites1.png" id="4_bvo2p"]
[ext_resource type="Texture2D" uid="uid://cwpuaw130550" path="res://assets/sprites/Lowrezjam_-_Colored_sprites1.png" id="4_tke8f"]
[ext_resource type="Texture2D" uid="uid://b14pj41rw0evv" path="res://assets/sprites/Lowrez_jam_sprites_-_Black_and_white.png" id="5_8l2fa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_21o7j"]
atlas = ExtResource("4_tke8f")
region = Rect2(6, 59, 4, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvl6l"]
atlas = ExtResource("4_tke8f")
region = Rect2(4, 75, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3qqo"]
atlas = ExtResource("4_tke8f")
region = Rect2(5, 111, 11, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw5hf"]
atlas = ExtResource("4_bvo2p")
region = Rect2(6, 59, 4, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gi0h"]
atlas = ExtResource("4_bvo2p")
region = Rect2(4, 75, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3p56"]
atlas = ExtResource("4_bvo2p")
region = Rect2(5, 111, 11, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_es7fe"]
atlas = ExtResource("4_tke8f")
region = Rect2(7, 122, 11, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_etgct"]
atlas = ExtResource("5_8l2fa")
region = Rect2(23, 64, 11, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_fyv4w"]
radius = 25.0

[sub_resource type="Gradient" id="Gradient_6yi5b"]
offsets = PackedFloat32Array(0.612403, 0.922481)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ckfvi"]
gradient = SubResource("Gradient_6yi5b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7mdf2"]
emission_shape = 2
emission_sphere_radius = 24.0
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.4
initial_velocity_max = 0.4
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.7
color_ramp = SubResource("GradientTexture1D_ckfvi")

[sub_resource type="AtlasTexture" id="AtlasTexture_espc6"]
atlas = ExtResource("5_8l2fa")
region = Rect2(101, 18, 3, 3)

[node name="Hedge" instance=ExtResource("1_xr67b")]
script = ExtResource("2_nun1l")
firerate = 2.5
days_to_grow = 2
plant_day = Array[Texture2D]([SubResource("AtlasTexture_21o7j"), SubResource("AtlasTexture_lvl6l"), SubResource("AtlasTexture_o3qqo")])
plant_night = Array[Texture2D]([SubResource("AtlasTexture_sw5hf"), SubResource("AtlasTexture_2gi0h"), SubResource("AtlasTexture_w3p56")])

[node name="PlantDay" parent="EntitySprites" index="0"]
position = Vector2(1, -3.5)
texture = SubResource("AtlasTexture_es7fe")

[node name="PlantNight" parent="EntitySprites" index="1"]
position = Vector2(1, -3.5)
texture = SubResource("AtlasTexture_etgct")

[node name="Area2D" type="Area2D" parent="." index="1"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_fyv4w")

[node name="GPUParticles2D" type="GPUParticles2D" parent="." index="2"]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_7mdf2")
texture = SubResource("AtlasTexture_espc6")
one_shot = true
explosiveness = 0.75

[node name="FireTimer" type="Timer" parent="." index="3"]

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
